[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Textures/main_menu.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/play_button.png" type="Texture" id=2]
[ext_resource path="res://Main/GUI/MainScreen.gd" type="Script" id=3]
[ext_resource path="res://Assets/Textures/settings_button.png" type="Texture" id=4]

[node name="MainScreen" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.267
anchor_right = 0.667
anchor_bottom = 1.0
margin_left = -0.320007
margin_top = 304.0
margin_right = -160.32
margin_bottom = -120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 224.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayButton" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 224.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )

[node name="SettingsButton" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 224.0
margin_bottom = 176.0
size_flags_vertical = 3
texture = ExtResource( 4 )
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_mouse_exited"]
